[tool.poetry]
name = "modular"
version = "0.0.1alpha"
description = ""
authors = ["Stax124 <tamoncz@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
colored-logs = "^0.2.10"
discord-pretty-help = "^1.3.4"
DiscordUtils = "^1.3.4"
sqlmodel = "^0.0.6"
alembic = "^1.8.0"
coloredlogs = "^15.0.1"
discord = "^1.7.3"
psycopg2-binary = "^2.9.3"
requests = "^2.28.0"
termcolor = "^1.1.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
poethepoet = {extras = ["poetry_plugin"], version = "^0.15.0"}
black = "^22.6.0"

[tool.poetry.dev-dependencies]
"discord.py-stubs" = "^1.7.3"
pytest = "^7.1.2"

[tool.poe.tasks]

    [tool.poe.tasks.build]
    help= "Build docker container"
    cmd = "docker build -t modular ."

    [tool.poe.tasks.start]
    help= "Run the application"
    cmd = "python main.py --enable-rce"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

